--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode=development",
     "start": "webpack-dev-server --open --mode=development",
     "lint": "eslint src --ext .js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
